--- a/css/style.css
+++ b/css/style.css
@@ -72,3 +72,10 @@ header .main-nav ul li a{
     font-weight: 700;
     margin-right: 0;
 }
+
+.jumbotron{
+    background-image: url(../img/jumbo.png);
+    width: 100%;
+    height: 400px;
+    background-size: cover;
+}
